[jOOQ/jOOQ#14806] Upgrade checkerframework to 3.19.0 to better support JDK 17